Sema: Fix crash with circular property initial values

Fixes <rdar://45313700>, <https://bugs.swift.org/browse/SR-9015>.